--- a/index.html
+++ b/index.html
@@ -1,16 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="css/style.css">
 	<title>Document</title>
 </head>
+
 <body>
-	<p>test</p>
-	<ul>
-		<li>1</li>
-		<li>2</li>
-		<li>3</li>
-	</ul>
+	
+
+<div class="box">
+	<h1>login</h1>
+	
+	<div class="form">	
+		<input type="text" name="" placeholder="Username">
+		<input type="password" name="" placeholder="Password">
+	</div>
+	
+	<input type="submit" name="" value="Login">	
+
+</div>
+
 </body>
+
+
 </html>
